--- a/Word_Cloud_e_analíse_de_sentimento.ipynb
+++ b/Word_Cloud_e_analíse_de_sentimento.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Word Cloud e analíse de sentimento.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMSMPnfilPxoqAQnDjCpq5Z",
+      "authorship_tag": "ABX9TyNH6xLUqOAOhvI2KBiIsSpl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,8 +30,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Projeto de analíse de um dataset do Twitter\n",
-        "Foi feito uma nuvem de palavras para cada sentimento e em seguida um modelo para analíse de sentimento "
+        "##Projeto de analíse de um dataset do Twitter\n",
+        "##Foi feito uma nuvem de palavras para cada sentimento e em seguida um modelo para analíse de sentimento "
       ],
       "metadata": {
         "id": "llDe4EgCNOwd"
