--- a/Modelo_classificacao.ipynb
+++ b/Modelo_classificacao.ipynb
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        " ##O dataset é o "insurance" do Pycaret onde tem o custo de seguro de vida, mas aqui será utilizado com o objetivo de prever se o cliente é fumante. Prever possíveis ou erro do preenchimento do relatório."
+        " ##O dataset é o insurance do Pycaret onde tem o custo de seguro de vida, mas aqui será utilizado com o objetivo de prever se o cliente é fumante. Prever possíveis ou erro do preenchimento do relatório."
       ],
       "metadata": {
         "id": "-70XFIJK5wU7"
